--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -21,6 +22,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/glidejs__glide": "^3.6.1",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.20",
